force-app/main/default/objects/Driver_Assigned__c/Driver_Assigned__c.object-meta.xml
<CustomObject>
    <label>Driver Assigned</label>
    <nameField>
        <label>Driver Assigned Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers Assigned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>