force-app/main/default/objects/Driver_Assigned__c/fields/Driver_Email__c.field-meta.xml
<CustomField>
    <fullName>Driver_Email__c</fullName>
    <formula>Driver__r.Email__c</formula>
    <label>Driver Email</label>
    <type>Text</type>
</CustomField>