force-app/main/default/objects/Driver_Assigned__c/fields/Driver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Driver_Phone__c</fullName>
    <formula>Driver__r.Phone__c</formula>
    <label>Driver Phone</label>
    <type>Text</type>
</CustomField>