force-app/main/default/objects/Driver_Assigned__c/fields/Gift_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Order__c</fullName>
    <label>Gift Card Order</label>
    <referenceTo>Gift_Card_Orders__c</referenceTo>
    <relationshipLabel>Drivers Assigned</relationshipLabel>
    <relationshipName>Drivers_Assigned</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>