force-app/main/default/objects/Driver_Assigned__c/fields/Quantity_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Assigned__c</fullName>
    <label>Quantity Assigned</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>